<resources>
    <string name="app_name">S305327Mappe3</string>
    <string name="add_new">Add new pet</string>
    <string name="nothing">No pets registered yet</string>
    <string name="add_header">Register a new pet</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="name">Name: </string>
    <string name="born">Born: </string>
    <string name="choose_date">Set date</string>
    <string name="add_treatment">New treatment</string>
    <string name="treatment_name">Treatment: </string>
    <string name="treatment_date">Date: </string>
    <string name="next_treatment_date">Next treatment: </string>
    <string name="submit">Save</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="update">Update</string>
    <string name="no_data">No data</string>
    <string name="new_weight">New weight: </string>
    <string name="cancel">Cancel</string>
    <string name="show_coming_treatments">Due treatments</string>
    <string name="show_recent_treatments">Recent treatments</string>
    <string name="delete">Delete</string>
    <string name="confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="push_title">Push Notifications</string>
    <string name="push_info">Allow/deny push notifications</string>
    <string name="sound_title">Sounds</string>
    <string name="sound_info">Allow/deny sound effects</string>
    <string name="no_treatments">No treatments found</string>
    <string name="no_coming_treatments">No coming treatments</string>
    <string name="ok">OK</string>
</resources>
