<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_treatment"
        style="@style/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/treatment_name"
            style="@style/label"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/treatment_name"
            style="@style/input"
            android:background="@drawable/input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/treatment_date"
            style="@style/label"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/treatment_date"
            android:onClick="chooseDate"
            android:text="@string/choose_date"
            style="@style/input"
            android:background="@drawable/date_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/next_treatment_date"
            style="@style/label"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/next_treatment_number"
            android:layout_marginRight="10dp"
            style="@style/input"
            android:background="@drawable/input">

        </EditText>
        <Spinner
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/next_treatment_unit"
            android:background="@drawable/date_button"
            style="@style/input">
        </Spinner>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="saveTreatment"
        android:background="@drawable/button"
        style="@style/submit_button" />



</LinearLayout>