<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_header"
        style="@style/header"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        style="@style/layout">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/cat"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/dog"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cat"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dog"
            android:checked="false"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/layout">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/label"/>
        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            style="@style/input"
            android:background="@drawable/input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/layout">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/born"
            style="@style/label"/>

        <Button
            android:id="@+id/born"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:onClick="chooseDate"
            style="@style/input"
            android:background="@drawable/date_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/layout">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            style="@style/label"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            style="@style/input"
            android:background="@drawable/input"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            style="@style/label"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="savePet"
        android:background="@drawable/button"
        style="@style/submit_button" />

</LinearLayout>